# Procedure-Crafter

./: Cargo.toml  README.md  native_run.txt  run.py  web_run.txt
src/: all.rs  file_system.rs  idk.rs  install_double_click_logic.rs  main.rs
src/custom/: block.rs  block_input.rs  camera.rs  id.rs  mod.rs  workspace.rs
src/internal/: block.rs  block_input.rs  camera.rs  id.rs  mod.rs  svg.rs  workspace.rs
src/logic/: accurate.rs  fast.rs  mod.rs
src/platform/: file_data.rs  mod.rs  native.rs  shared.rs  web.rs
src/render/: fast.rs  mod.rs  pretty.rs
webout/: index.html  procedure_crafter.d.ts  procedure_crafter.js  procedure_crafter_bg.wasm  procedure_crafter_bg.wasm.d.ts
